Index page alignment styling fixes.

--- a/css/output.css
+++ b/css/output.css
@@ -1210,13 +1210,6 @@ select {
   left: 0px;
 }
 
-.inset-10 {
-  top: 2.5rem;
-  right: 2.5rem;
-  bottom: 2.5rem;
-  left: 2.5rem;
-}
-
 .-inset-y-6 {
   top: -1.5rem;
   bottom: -1.5rem;
@@ -1320,6 +1313,10 @@ select {
   margin-top: -1.5rem;
 }
 
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
@@ -1364,6 +1361,10 @@ select {
   margin-left: 1rem;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .mt-\[calc\(theme\(spacing\.16\)-theme\(spacing\.3\)\)\] {
   margin-top: calc(4rem - 0.75rem);
 }
@@ -1372,20 +1373,12 @@ select {
   margin-bottom: -0.75rem;
 }
 
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
 .mt-16 {
   margin-top: 4rem;
 }
 
 .ml-auto {
   margin-left: auto;
-}
-
-.mt-32 {
-  margin-top: 8rem;
 }
 
 .block {
@@ -1444,12 +1437,12 @@ select {
   height: 1.75rem;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-px {
   height: 1px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-6 {
@@ -1477,10 +1470,6 @@ select {
   width: 7rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -1501,10 +1490,6 @@ select {
   width: 1.75rem;
 }
 
-.w-9 {
-  width: 2.25rem;
-}
-
 .min-w-0 {
   min-width: 0px;
 }
@@ -1513,12 +1498,12 @@ select {
   max-width: 80rem;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
-}
-
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
 }
 
 .max-w-xs {
@@ -1708,14 +1693,14 @@ select {
   border-color: rgb(24 24 27 / 0.1);
 }
 
-.border-red-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
 .bg-zinc-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 245 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-white\/90 {
@@ -1735,11 +1720,6 @@ select {
 .bg-zinc-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(228 228 231 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-800 {
@@ -1826,14 +1806,14 @@ select {
   padding-bottom: 0.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-\[calc\(theme\(spacing\.2\)-1px\)\] {
@@ -1863,20 +1843,20 @@ select {
   padding-left: 0.75rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
 }
 
 .pb-16 {
   padding-bottom: 4rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .pt-8 {
@@ -2007,6 +1987,11 @@ select {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.ring-zinc-100 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(244 244 245 / var(--tw-ring-opacity));
+}
+
 .ring-zinc-900\/5 {
   --tw-ring-color: rgb(24 24 27 / 0.05);
 }
@@ -2019,11 +2004,6 @@ select {
 .ring-\[\#ee9b00\] {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(238 155 0 / var(--tw-ring-opacity));
-}
-
-.ring-zinc-100 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(244 244 245 / var(--tw-ring-opacity));
 }
 
 .backdrop-blur {
@@ -2180,6 +2160,11 @@ html {
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-zinc-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+  }
+
   .dark\:bg-zinc-800\/90 {
     background-color: rgb(39 39 42 / 0.9);
   }
@@ -2205,11 +2190,6 @@ html {
   .dark\:bg-zinc-700 {
     --tw-bg-opacity: 1;
     background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-zinc-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(24 24 27 / var(--tw-bg-opacity));
   }
 
   .dark\:from-teal-400\/0 {
@@ -2294,12 +2274,12 @@ html {
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
 
-  .dark\:ring-white\/10 {
-    --tw-ring-color: rgb(255 255 255 / 0.1);
-  }
-
   .dark\:ring-zinc-300\/20 {
     --tw-ring-color: rgb(212 212 216 / 0.2);
+  }
+
+  .dark\:ring-white\/10 {
+    --tw-ring-color: rgb(255 255 255 / 0.1);
   }
 
   .dark\:placeholder\:text-zinc-500::-moz-placeholder {
@@ -2489,12 +2469,12 @@ html {
     max-width: 42rem;
   }
 
-  .lg\:max-w-5xl {
-    max-width: 64rem;
-  }
-
   .lg\:max-w-none {
     max-width: none;
+  }
+
+  .lg\:max-w-5xl {
+    max-width: 64rem;
   }
 
   .lg\:basis-2\/5 {
